2016-11-17  Krister Walfridsson  <krister.walfridsson@gmail.com>

	* config/netbsd-stdint.h: New.
	* config.gcc (i[34567]86-*-netbsd): Add netbsd-stdint.h to tm_file.
	(x86_64-*-netbsd*): Likewise.

2016-11-16  Andrew PInski  <apinski@cavium.com>

	* config/aarch64/aarch64.opt (mverbose-cost-dump): New option.
	* config/aarch64/aarch64.c (aarch64_rtx_costs): Use
	flag_aarch64_verbose_cost instead of checking for details dump.
	(aarch64_rtx_costs_wrapper): Likewise.

2016-11-16  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/78378
	* combine.c (make_extraction): Use force_to_mode for non-{REG,MEM}
	inner only if pos is 0.  Fix up formatting.

2016-11-17  Alan Modra  <amodra@gmail.com>

	PR rtl-optimization/78325
	PR rtl-optimization/70890
	* ira.c (combine_and_move_insns): Only remove REG_EQUIV notes
	for dead regno.

2016-11-16  Jason Merrill  <jason@redhat.com>

	* rtl.h: Declare gt_ggc_mx and gt_pch_nx.

2016-11-16  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR tree-optimization/77848
	* tree-if-conv.c (version_loop_for_if_conversion): When versioning
	an outer loop, only save basic block aux information for the inner
	loop.
	(versionable_outer_loop_p): New function.
	(tree_if_conversion): Version the outer loop instead of the inner
	one if the pattern will be recognized for outer-loop
	vectorization.

2016-11-16  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gcc/bb-reorder.c: Remove 'toplev.h' include.
	(pass_partition_blocks::gate): No longer check
	user_defined_section_attribute, instead check the function decl
	for a section attribute.
	* gcc/c-family/c-attribs.c (handle_section_attribute): No longer
	set user_defined_section_attribute.
	* gcc/final.c (rest_of_handle_final): Likewise.
	* gcc/toplev.c: Remove definition of user_defined_section_attribute.
	* gcc/toplev.h: Remove declaration of
	user_defined_section_attribute.

2016-11-16  Maciej W. Rozycki  <macro@imgtec.com>

	* config/mips/mips.md (casesi_internal_mips16_<mode>):